--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Appsus</title>
   </head>
-      <main id="app">
+  <body>
+    <main id="app"></main>
+    <script src="./lib/vue.js"></script>
+    <script src="./lib/vue-router.js"></script>
   </body>
 </html>
