--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <main id="app"></main>
     <script src="./lib/vue.js"></script>
     <script src="./lib/vue-router.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
