CRUD COMPLETE ON KEEP

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <main id="app"></main>
     <script src="./lib/vue.js"></script>
     <script src="./lib/vue-router.js"></script>
+    <script
+      src="https://kit.fontawesome.com/3f45fc7b60.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
