--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
     <title>Appsus</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <main id="app"></main>
     <script src="./lib/vue.js"></script>
     <script src="./lib/vue-router.js"></script>
-    <script
-      src="https://kit.fontawesome.com/3f45fc7b60.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/3f45fc7b60.js" crossorigin="anonymous"></script>
     <script type="module" src="./js/main.js"></script>
-  </body>
+</body>
+
 </html>
